--- a/README.html
+++ b/README.html
@@ -51,7 +51,9 @@ ul.task-list li input[type="checkbox"] {
 <p>For this project, I will analyze 10 years of payroll data for the Fire and Police departments in New York City. This dataset represents a well-defined and comprehensive universe of information, making it ideal for thorough exploration and analysis.</p>
 <p>It includes a variety of data types such as categorical text with differing levels of granularity, numerical data, dates, and fields with missing or outlier values. These characteristics provide opportunities to practice a range of analytical techniques, from data cleaning to advanced visualizations for pattern discovery.</p>
 <p>Let’s uncover the stories hidden in the data!</p>
-<p><span style="font-size:300%;">🚒 💵 🚓</span></p>
+</section>
+<section id="section" class="level1">
+<h1>🚒 💵 🚓</h1>
 </section>
 
 </main>
